syntax = "proto3";

package tao;

option go_package = "github.com/absolutelightning/tao-basic/tao/proto";

message ObjectAddRequest {
  string id = 1;
  string otype = 2;
  repeated KeyValuePair data = 3;
}

message GenericOkResponse {

}

message AssocAddRequest {
  string id1 = 1;
  string atype = 2;
  string id2 = 3;
}

message AssocDeleteRequest {
  string id1 = 1;
  string atype = 2;
  string id2 = 3;
}

message AssocChangeType {
  string id1 = 1;
  string atype = 2;
  string id2 = 3;
  string newType = 4;
}

message AssocGetRequest {
  string id1 = 1;
  string atype = 2;
  repeated string id2 = 3;
  optional string low = 4;
  optional string high = 5;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message Object {
  string id = 1;
  repeated KeyValuePair items = 2;
}

message AssocGetResponse {
  repeated Object objects = 1;
}

message BulkAssocAddRequest {
  repeated AssocAddRequest req = 1;
}

message ObjectGetDataRequest {
  repeated KeyValuePair data = 1;
}

message ObjectGetRequest {
  string otype = 1;
  int64 limit = 2;
  optional ObjectGetDataRequest data = 3;
}

message AssocRangeRequest {
  string id1 = 1;
  string atype = 2;
  int64 pos = 3;
  int64 limit = 4;
}

message BulkObjectAddRequest {
  repeated ObjectAddRequest req = 1;
}

service TaoService {
  rpc ObjectAdd(ObjectAddRequest) returns (GenericOkResponse);
  rpc ObjectGet(ObjectGetRequest) returns (AssocGetResponse);
  rpc AssocAdd(AssocAddRequest) returns (GenericOkResponse);
  rpc AssocGet(AssocGetRequest) returns (AssocGetResponse);
  rpc AssocRange(AssocRangeRequest) returns (AssocGetResponse);
  rpc BulkAssocAdd(BulkAssocAddRequest) returns (GenericOkResponse);
  rpc BulkObjectAdd(BulkObjectAddRequest) returns (GenericOkResponse);
}
